syntax = "proto3";
package protos;
import "base.proto";

//enum ActionType {
//    None = 0;
//    Attack = 1;  //普通攻击
//    UseItem = 2; //使用道具
//    Skip = 3;    //跳过turn
//    Open = 4;    //翻块
//    Skill = 5;   //使用技能
//    Buff = 6;    //触发buff
//}

//enum EffectType {
//    None = 0;
//    Attacked = 1;  //受到普通攻击
//    SkillDamge = 2; //受到技能伤害
//    Skip = 3;    //跳过turn
//    Open = 4;    //翻块
//    Skill = 5;   //使用技能
//    Buff = 6;    //触发buff
//}

//行动请求
//cmd=20021
message C_ACTION{
    uint32 action_type = 1;//行动类型 可以是使用技能，可以是普通攻击,可以是使用道具
    uint32 value = 2;//行动对应类型的值
    repeated uint32 target = 3;//目标 可以是块，可以是玩家，可以是自己
}

//战斗开始通知
//cmd=10030
message S_BATTLE_START_NOTICE{
    repeated BattleCharacterPt battle_cters = 1;//战斗角色数据
}

//行动推送
//cmd=10031
message S_ACTION_NOTICE{
    repeated ActionUnitPt action_uints = 1;//行动单位
}

//地图刷新推送
//cmd = 10032
message S_MAP_REFRESH_NOTICE{
    uint32 tile_map_id = 2;//地图配置id
    repeated uint32 cells = 3;//包含的块
    repeated WorldCellPt world_cell = 4;//世界块
}

//结算推送
//cmd=10033
message S_SETTLEMENT_NOTICE{
    repeated uint32 user_id = 1;//玩家名次
}